Applied changes to the site's CSS and FucDetail csthml so it uses tables

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Detail.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Detail.cshtml
@@ -15,42 +15,88 @@
 }
 
 <p>
+<div style="background: gainsboro">
+<table>
+<p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Name):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Name)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Acr):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Acr)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.IsRequired):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.IsRequired)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Semesters):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Semesters)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Prerequisites):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Prerequisites)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Ects):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Ects)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Objectives):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Objectives)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Results):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Results)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Evaluation):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Evaluation)
+</td></tr>
 </p>
 <p>
+<tr><th><b>
 @Html.LabelFor(n => Model.Program):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Program)
+</td></tr>
+</p>
+</table>
+</div>
 </p>
