created default layout for all views. Start to use .css

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
@@ -2,27 +2,18 @@
 
 @{
     ViewBag.Title = "Homepage";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Homepage</h1>
-@if(Request.IsAuthenticated)
-{
-    <text>Welcome <strong> @Html.ActionLink(@User.Identity.Name, "Detail", "Profile")<br /> </strong>
-    
-    [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text><br />
-    
-    if(User.IsInRole("admin"))
-    {
-        @Html.ActionLink("Manage Roles", "Admin", "Account")<br />
-    }
+<p>Fuc Manager</p>
+
+
+@{/*@if (Request.IsAuthenticated)
+  {
     @Html.ActionLink("Create New Fuc", "Create", "NewFucProposal")<br />
     @Html.ActionLink("Fuc Proposal List", "Index", "Proposal")<br />
     @Html.ActionLink("New Fuc Proposal List", "Index", "NewFucProposal")<br />
-}
-else
-{
-    @Html.ActionLink("Register", "Index", "Register")
-    @:[ @Html.ActionLink("Log In", "LogOn", "Account") ]<br />
-}
+  }
 
-@Html.ActionLink("Fuc List", "Index", "Fuc")<br />
+@Html.ActionLink("Fuc List", "Index", "Fuc")<br />*/}
