--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
@@ -3,8 +3,9 @@ body
     font-size: .85em;
     font-family: "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
     color: #232323;
-    background-color: #fff;
+    background-color: black;
 }
+
 
 header,
 footer,
@@ -13,27 +14,68 @@ section {
     display: block;
 }
 
-
-#login {
-    font-size: 1.1em;
-    display: block;
-    text-align: right;
-    margin: 10px;
-    color: White;
-}
-
 .page {
-    width: 90%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
+    background-color: darkcyan;    
+}
+.header {
+    height: auto;
+    width: auto;
+    position: relative;
+}
+#leftcol 
+{
+    position: relative;
+    
+    float:left;
+    text-align: left;
+    padding-top: 150px;
+    background-color: darkcyan;  
 }
 
-#main {
-    padding: 30px 30px 15px 30px;
-    background-color: #fff;
-    border-radius: 4px 0 0 0;
-    -webkit-border-radius: 4px 0 0 0;
-    -moz-border-radius: 4px 0 0 0;
+.header #search 
+{
+    float: right;
+    font-size: 1.0em;
+    display: block;
+    text-align: right;
+    margin: 5px;
+}
+
+.header #title 
+{
+    font-size: 1.2em;
+   position: relative;
+    text-align: left;
+    margin: 5px;
+}
+
+.header #login {
+    font-size: 0.8em;
+    display: block;
+    position: relative;
+    float: right;
+    text-align: right;
+    margin: 5px;
+}
+
+
+.header #links {
+    font-size: 1.1em;
+    display: block;
+    position: relative;
+    text-align: left;
+    margin: 5px;
+
+}
+
+#main 
+{
+    position: relative;
+    padding: 0px 0px 0px 0px;
+    background-color: rgb(221, 221, 221);
 }
 /* Styles for basic forms
 -----------------------------------------------------------*/
