--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
@@ -1,11 +1,10 @@
 body
 {
-    font-size: .85em;
-    font-family: "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
+    /*font-size: .85em;*/
+    font-family: Calibri, Verdana, Sans-Serif;
     color: #232323;
-    background-color: black;
+    background-color: white;
 }
-
 
 header,
 footer,
@@ -14,28 +13,30 @@ section {
     display: block;
 }
 
-.page {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: darkcyan;    
-}
-.header {
-    height: auto;
-    width: auto;
-    position: relative;
-}
-#leftcol 
+.page 
 {
+    width: 1005;
+    height: 750;
+    /*margin: 20px;*/
+    margin: 10px auto 0px auto;
+    background-color: #98AFC7;
+}
+.header 
+{
+    width: 100%;
+    height: 100px;
     position: relative;
-    
-    float:left;
-    text-align: left;
-    padding-top: 150px;
-    background-color: darkcyan;  
+}
+#page_content 
+{
+    position: absolute;
+    /*float:left;
+    text-align: left;*/
+    padding: 20px;
+    background-color: blue;
 }
 
-.header #search 
+.header #search
 {
     float: right;
     font-size: 1.0em;
@@ -44,15 +45,17 @@ section {
     margin: 5px;
 }
 
-.header #title 
+.header #title
 {
-    font-size: 1.2em;
-   position: relative;
-    text-align: left;
+    font-size: 30px;
+    font-weight: bold;
+    position: relative;
+    text-align: center;
     margin: 5px;
 }
 
-.header #login {
+.header #login
+{
     font-size: 0.8em;
     display: block;
     position: relative;
@@ -61,14 +64,24 @@ section {
     margin: 5px;
 }
 
+.header #login_failed
+{
+    font-size: 0.8em;
+    display: block;
+    position: relative;
+    float: right;
+    text-align: right;
+    margin: 5px;
+}
 
-.header #links {
+.header #page_links
+{
+    width: 500px;
     font-size: 1.1em;
     display: block;
     position: relative;
-    text-align: left;
+    text-align: right;
     margin: 5px;
-
 }
 
 #main 
