--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -1,66 +1,60 @@
 ﻿<!DOCTYPE html>
 <html>
-<!--<head>
+<head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
-</head>-->
+</head>
 
 <body>
     <div class="page">
 
      <div class="header">
    
-          <div id="title">
-            <h1>ISEL Course Aplication</h1>
-          </div>
-            <div id="search">
+          <div id="title">ISEL Course Aplication</div>
+
+          <div id="page_links">
+            @Html.ActionLink("Home", "Index", "Home")
+            @Html.ActionLink("Fuc List", "Index", "Fuc")<br />
             
+            @if(Request.IsAuthenticated)
+            {
+                @Html.ActionLink("Create New Fuc", "Create", "NewFucProposal")<br />
+                @Html.ActionLink("Fuc Proposal List", "Index", "Proposal")<br />
+                @Html.ActionLink("New Fuc Proposal List", "Index", "NewFucProposal")<br />
+            }            
+         
             @using (Html.BeginForm("Index", "Home", FormMethod.Post))
                 {
                    <input type="text" value="Search"/>
                    <input type="submit" value="Go"/>
                 }
+          </div>
 
-            </div>
             <div id="login">
-                  @if (Request.IsAuthenticated)
-                  {
-                      <text>Welcome <strong> @Html.ActionLink(@User.Identity.Name, "Detail", "Profile") </strong>
+                    @if (Request.IsAuthenticated)
+                    {
+                        <text>Welcome <strong> @Html.ActionLink(@User.Identity.Name, "Detail", "Profile") </strong>
     
-                          [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
-                      <br />
+                            [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
+                        <br />
 
-                      if (User.IsInRole("admin"))
-                      {
-                          @Html.ActionLink("Manage Roles", "Admin", "Account")
-                      }
-                  }
-                  else
-                  {
-                        @Html.ActionLink("Register", "Index", "Register")
-                        @:[ @Html.ActionLink("Log In", "LogOn", "Account") ]
+                        if (User.IsInRole("admin"))
+                        {
+                            @Html.ActionLink("Manage Roles", "Admin", "Account")
+                        }
+                    }
+                    else
+                    {
+                        /*@Html.ActionLink("Register", "Index", "Register")
+                        @:[ @Html.ActionLink("Log In", "LogOn", "Account") ]*/
                     } 
             </div>
-
-           <div id="links">
-                 @Html.ActionLink("Home", "Index", "Home")
-            </div>
         </div>
-     <div id="leftcol"> 
-        @if(Request.IsAuthenticated)
-         {
-            @Html.ActionLink("Create New Fuc", "Create", "NewFucProposal")<br />
-            @Html.ActionLink("Fuc Proposal List", "Index", "Proposal")<br />
-            @Html.ActionLink("New Fuc Proposal List", "Index", "NewFucProposal")<br />
-          }
 
-        @Html.ActionLink("Fuc List", "Index", "Fuc")<br />
-     </div>
-
-        <div id="main">
+        <div id="page_content">
             @RenderBody()
         </div>
     </div>
