--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
@@ -7,8 +7,49 @@
 <a href=@Url.Action("Index", "Home")>Home</a>
 <h1>New Fuc Proposal List</h1>
 
-<ul>
-@foreach (var f in Model){
-        <li> <a href=@Url.Action("Detail", "NewFucProposal",new { @id = f.Idx }) >@f.Idx</a></li>
-}
-</ul>
+
+<!--<ul>
+    @foreach (var f in Model){
+        <h2 class="ui-accordion"> <a href=@Url.Action("Detail", "NewFucProposal",new { @id = f.Idx }) >@f.Idx</a></h2>
+    }
+</ul>-->
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('button.accordion').click(function () {
+            $(this).parent().find('div.accordion').slideToggle();
+        });
+    });
+</script>
+
+<script src="http://code.jquery.com/jquery-1.5.2.js" type="text/javascript"></script>
+<script type="text/javascript">
+    function showDetail() {
+        var myurl = "/NewFucProposal/PDetail/0";
+        //console.log(myurl + "0");
+        var page = parseInt($('#pageinput').val())+1;
+        //var items_per_page=$('#DisplayNum').val();
+        var http = new XMLHttpRequest();
+        http.open("GET", myurl, false);
+        http.onreadystatechange = window.useHttpResponse;
+        var send = http.send(null);
+        
+        if (http.readyState == 4 && http.status == 200) {
+            var textout = http.responseText;
+            console.log(textout);
+            $('#newFucDetail').html(textout);
+           
+        }
+    }</script>
+
+
+<div>
+    @foreach (var f in Model)
+    {
+        <button class="accordion" onclick="showDetail()"> @f.Idx</button>  
+    }
+    
+    <div id="newFucDetail" class="accordion"/>
+</div>
+
+
