--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
@@ -27,13 +27,24 @@ section {
     height: 100px;
     position: relative;
 }
+
+.page_links
+{
+    /*width: 150px;*/
+    width: 50%;
+    display: block;
+    position: relative;
+    text-align: left;
+    margin: 5px;
+}
+
 #page_content 
 {
     position: absolute;
     /*float:left;
     text-align: left;*/
     padding: 20px;
-    background-color: blue;
+    background-color: #ECE5B6;
 }
 
 .header #search
@@ -56,7 +67,7 @@ section {
 
 .header #login
 {
-    font-size: 0.8em;
+    /*font-size: 0.8em;*/
     display: block;
     position: relative;
     float: right;
@@ -70,16 +81,6 @@ section {
     display: block;
     position: relative;
     float: right;
-    text-align: right;
-    margin: 5px;
-}
-
-.header #page_links
-{
-    width: 500px;
-    font-size: 1.1em;
-    display: block;
-    position: relative;
     text-align: right;
     margin: 5px;
 }
