--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
@@ -39,15 +39,29 @@
 <div>
    <table border="1">
         <tr>
-            <th>Proposal number</th>
-            <th>User</th>
+            <th>Proposal</th>
+            <th>Acronym</th>
+            <th>Creator</th>
+            <th>Aproval</th>
         </tr>
         @foreach (var f in Model)
         {
         
             <tr>
-                <td><a href=@Url.Action("Detail", "NewFucProposal", new { @id = f.Idx }) class="detailer"> Proposta @f.Idx</a></td>
+                <td><a href=@Url.Action("Detail", "NewFucProposal", new { @id = f.Idx }) class="detailer"> Proposal @f.Idx</a></td>
+                <td><a href=@Url.Action("Detail", "NewFucProposal", new { @id = f.Idx }) class="detailer">@f.Acr</a></td>
                 <td><a href=@Url.Action("Detail", "Profile", new { @id = f.User }) class="detailer"> @f.User</a></td>
+                <td>
+                    @using (Html.BeginForm("Accept", "NewFucProposal", new {@id=f.Idx}, FormMethod.Post))
+                    {
+                        <input type="submit" value="Accept"/>
+                    }
+                    
+                    @using (Html.BeginForm("Refuse", "NewFucProposal", new {@id=f.Idx}, FormMethod.Post))
+                    {
+                        <input type="submit" value="Refuse"/>
+                    }
+                </td>
             </tr>  
         }
     </table>
