--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
@@ -35,9 +35,10 @@
         var accord = ready;
     </script>-->  
 
+@Html.Partial("Pagination")
 
 <div>
-   <table border="1">
+   <table border="1" id="elems">
         <tr>
             <th>Proposal</th>
             <th>Acronym</th>
