added no pagination option to fuc list view. created a no pagination index view for fuc controler.

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Account/Admin.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Account/Admin.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = "title";
 }
-
+<!--falta usar js para ver ios roles activos -->
 <h1>Manage User Roles</h1>
 
 @using (Html.BeginForm("Admin", "Account", FormMethod.Post))
