--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         @Html.ActionLink("Register", "Index", "Register")
                         @:[ @Html.ActionLink("Log In", "LogOn", "Account") ]
                     }
-                    <!-- alterar padding-left no else antes. seu cao ve la se pa proxima n fazez commit antes de ver se isto tem erros, este comentario ali no e,lse dava erro dps!-->
+                    <!-- alterar padding-left no else antes.-->
                 </span>
                 <span style="padding-left: 750px; text-align: right"> <!-- <span style="padding-left: 750px; text-align: right"> -->
                     @using (Html.BeginForm("Index", "Home", FormMethod.Post))
