--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
@@ -4,7 +4,6 @@
 @{
     ViewBag.Title = "New Fuc Proposal List";
 }      
-<a href=@Url.Action("Index", "Home")>Home</a>
 <h1>New Fuc Proposal List</h1>
 
 
@@ -33,7 +32,8 @@
 <!--<script type="text/javascript" src="~/Scripts/AccordionScript.js"></script>
     <script type="text/javascript">
         var accord = ready;
-    </script>-->  
+    </script> 
+@Html.ActionLink("Pagination Off", "Index", new { @pagination = false })--> 
 
 @Html.Partial("Pagination")
 
