--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.5.2.js" type="text/javascript"></script>
     <script src="../../Scripts/Pagination.js" type="text/javascript"></script>
+    <script type="text/javascript" src="~/Scripts/AccordionScript.js"></script>
  
 
 
