--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/IndexAll.cshtml
@@ -8,17 +8,5 @@
 @Html.ActionLink("Pagination On", "Index", new { @pagination = true }, new { @id ="paging" })
 
     <table id="elems">
-    <thead>
-    <tr><th>Fuc Name</th></tr>
-    </thead>
-    <tbody>
-
-        @foreach (var f in Model)
-        {
-            <tr>
-                <td> <a href=@Url.Action("Detail", "Fuc", new { @id = f.Acr }) >@f.Name</a></td>
-            </tr>
-        }
-        
-     </tbody>
+   @Html.Partial("PIndex")
     </table>
