--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/PIndex.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/PIndex.cshtml
@@ -10,8 +10,12 @@
 
         @foreach (var f in Model){
             <tr>
-                <td> <a href=@Url.Action("Detail", "Fuc",new { @id = f.Acr }) >@f.Name</a></td>
+                <td> <a href=@Url.Action("Detail", "Fuc",new { @id = f.Acr }) class="detailer">@f.Name</a></td>
             </tr>
         }
         
      </tbody>
+        
+ 
+    
+
