--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/Index.cshtml
@@ -3,12 +3,23 @@
 
 @{
     ViewBag.Title = "Fuc Proposal List";
-}      
-<a href=@Url.Action("Index", "Home")>Home</a>
+}     
 <h1>Fuc Proposal List</h1>
 
-<ul>
-@foreach (var f in Model){
-        <li> <a href=@Url.Action("Detail", "Proposal",new { @id = f.Idx }) >@f.Idx</a></li>
-}
-</ul>
+
+@Html.ActionLink("Pagination Off", "Index", new { @pagination = false }, new { @id ="paging" })
+
+ <input type="hidden" id="totalelems" value="@ViewData["totalitems"]"/>
+<div id="pager">
+
+ @Html.Partial("Pagination")
+ </div>
+
+ 
+<div>
+   <table border="1" id="elems">
+    @Html.Partial("PIndex")
+    </table>
+</div>
+<div id="showDetail"/> 
+
