--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.5.2.js" type="text/javascript"></script>
+    <script src="../../Scripts/jquery-1.7.1.js" type="text/javascript"></script>
+    <script src="../../Scripts/jquery-ui-1.8.11.js" type="text/javascript"></script>
     <script src="../../Scripts/Pagination.js" type="text/javascript"></script>
     <script type="text/javascript" src="../../Scripts/AccordionScript.js"></script>
  
@@ -55,7 +57,19 @@
                 <span style="padding-left: 750px; text-align: right"> <!-- <span style="padding-left: 750px; text-align: right"> -->
                     @using (Html.BeginForm("Index", "Search", FormMethod.Post))
                         {
-                            <input type="text" value="Search" name="searchQuery"/>
+                        
+                            <script type="text/javascript">
+                                $.ajaxSetup({ type: "post" });
+                                $(document).ready(function () {
+                                    $("input#autocomplete").autocomplete({
+                                        source: '@Url.Action("Index", "Search")', minChars: 3, delay: 500
+                                    });
+                                });
+                            </script>
+                        
+                            <input type="text" value="Search" name="searchQuery" />
+                            
+                            
                             <input type="submit" value="Go"/>
                         }
                 </span>
