--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/PIndex.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/PIndex.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "title";
 }
     <thead>
-    <tr><th>Fuc Name</th></tr>
+    <tr><th class="order">Fuc Name </th></tr>
     </thead>
     <tbody>
 
