--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/IndexAll.cshtml
@@ -8,6 +8,9 @@
 
 @Html.ActionLink("Pagination On", "Index", new { @pagination = true }, new { @id ="paging" })
 
+<input type="hidden" id="totalelems" value="@ViewData["totalitems"]"/>
+<div id="pager">
+ </div>
 
 <div>
    <table border="1" id="elems">
