--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -4,16 +4,46 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/themes/base/jquery-ui-1.8.custom.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.5.2.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery-1.7.1.js" type="text/javascript"></script>
-    <script src="../../Scripts/jquery-ui-1.8.11.js" type="text/javascript"></script>
+<!--<script src="../../Scripts/autosuggest.js" type="text/javascript"></script>
+<script src="../../Scripts/bindevents.js" type="text/javascript"></script>-->
+    <script src="../../Scripts/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
     <script src="../../Scripts/Pagination.js" type="text/javascript"></script>
     <script type="text/javascript" src="../../Scripts/AccordionScript.js"></script>
  
-
-
+ <script type="text/javascript">
+     $.ajaxSetup({ type: "post" });
+     $(document).ready(function () {
+         $("input#searchQuery").autocomplete({
+             source: '@Url.Action("Find", "Search")', minChars: 1, delay: 500
+         });
+     });
+ </script>
+                            
+    <!--<script type="text/javascript">
+        $.ajaxSetup({ type: "post" });
+        $(document).ready(function() {
+            function bindEvents()
+            {
+                //Find all of the INPUT tags
+                var tags = document.getElementsByTagName('INPUT');
+                for (i in tags)
+                {
+                    var tag = tags[i];
+                    //If it's a text tag, attach an AutoSuggest object.
+                    if(tag.type && tag.type.toLowerCase() == "text")
+                    {
+                        new AutoSuggest(tag,fruits);
+                    }
+                }
+            }
+        
+        });</script>-->
+       
 </head>
 
 <body>
@@ -58,19 +88,10 @@
                     @using (Html.BeginForm("Index", "Search", FormMethod.Post))
                         {
                         
-                            <script type="text/javascript">
-                                $.ajaxSetup({ type: "post" });
-                                $(document).ready(function () {
-                                    $("input#autocomplete").autocomplete({
-                                        source: '@Url.Action("Index", "Search")', minChars: 3, delay: 500
-                                    });
-                                });
-                            </script>
-                        
-                            <input type="text" value="Search" name="searchQuery" />
-                            
-                            
+                         <input type="text" id="searchQuery" name="query"/>
+                        //@Html.TextBox("searchQuery");
                             <input type="submit" value="Go"/>
+                            <div id="autosuggest"><ul></ul></div>
                         }
                 </span>
                 
