--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/Pagination.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/Pagination.cshtml
@@ -3,7 +3,7 @@
 }
 
    <div id="pages">
-        <div>Page <input id="pageinput" type="text" style="width:15px;"> of <span id="totalp"></span></div>
+        <div>Page <input id="pageinput" type="text" style="width:15px;" value="@ViewData["page"]"> of <span id="totalp"></span></div>
          <div id="selector">
              <a href="?page=@ViewData["pageprev"]&itemsnumber=@ViewData["itemsnumber"]" id="prev" >prev</a>
              <a href="?page=@ViewData["pagenext"]&itemsnumber=@ViewData["itemsnumber"]" id="next" >next</a>
