--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
 <script src="../../Scripts/bindevents.js" type="text/javascript"></script>-->
     <script src="../../Scripts/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
     <script src="../../Scripts/Pagination.js" type="text/javascript"></script>
+    <script src="../../Scripts/orderby.js" type="text/javascript"></script>
     <script type="text/javascript" src="../../Scripts/AccordionScript.js"></script>
  
  <script type="text/javascript">
