trying to apply changes to autocomplete

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
@@ -153,3 +153,25 @@ textarea
 {
     display: none;
 }
+
+
+/* css necessário para exemplo de autosuggest
+#suggest{
+ 	position:absolute;
+ 	background:#fff;
+ 	width:150px;
+ 	}
+ 
+ #suggest div{
+ 	background:#fff;
+ 	color:#000;
+ 	padding-left:4px;
+ 	cursor:hand;
+ 	text-align:left;
+ 	}
+ 
+ #suggest div.over{
+ 	color:#fff;
+ 	background:#000;
+ 	}
+*/
