--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -9,8 +9,7 @@
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.5.2.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery-1.7.1.js" type="text/javascript"></script>
-<!--<script src="../../Scripts/autosuggest.js" type="text/javascript"></script>
-<script src="../../Scripts/bindevents.js" type="text/javascript"></script>-->
+<!--<script src="../../Scripts/autosuggest.js" type="text/javascript"></script>-->
     <script src="../../Scripts/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
     <script src="../../Scripts/Pagination.js" type="text/javascript"></script>
     <script src="../../Scripts/orderby.js" type="text/javascript"></script>
@@ -24,26 +23,7 @@
          });
      });
  </script>
-                            
-    <!--<script type="text/javascript">
-        $.ajaxSetup({ type: "post" });
-        $(document).ready(function() {
-            function bindEvents()
-            {
-                //Find all of the INPUT tags
-                var tags = document.getElementsByTagName('INPUT');
-                for (i in tags)
-                {
-                    var tag = tags[i];
-                    //If it's a text tag, attach an AutoSuggest object.
-                    if(tag.type && tag.type.toLowerCase() == "text")
-                    {
-                        new AutoSuggest(tag,fruits);
-                    }
-                }
-            }
-        
-        });</script>-->
+  
        
 </head>
 
@@ -85,18 +65,13 @@
                     }
                     <!-- alterar padding-left no else antes.-->
                 </span>
-                <span style="padding-left: 750px; text-align: right"> <!-- <span style="padding-left: 750px; text-align: right"> -->
+                  <span style="padding-left: 750px; text-align: right"> <!-- <span style="padding-left: 750px; text-align: right"> -->
+
                     @using (Html.BeginForm("Index", "Search", FormMethod.Post))
                         {
-                        
-                         
-                            <!--<input type="text" id="txt" style="border:#000000 1px solid;width:150px;" autocomplete=off/>
- 
-                               <div id="suggest" style="visibility:hidden;border:#000000 1px solid;width:150px;"></div>-->
                             <input type="text" id="searchQuery" name="query"/>
                             //@Html.TextBox("searchQuery");
                             <input type="submit" value="Go"/>
-                            <!--<div id="autosuggest"><ul></ul></div>-->
                         }
                 </span>
                 
