created Ordenation support. changed some view aspects

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Index.cshtml
@@ -14,7 +14,10 @@
  @Html.Partial("Pagination")
  </div>
 
-    <table id="elems">
-    @Html.Partial("PIndex")
+    <table>
+        <thead>
+    <tr><th class="order">Fuc Name</th></tr>
+    </thead>  
+   @Html.Partial("PIndex")
     </table>
     <div id="showDetail"/> 
