--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/IndexAll.cshtml
@@ -13,6 +13,11 @@
 
 
     <table id="elems">
+        <thead>
+    <tr><th class="order">Fuc Name</th></tr>
+    </thead>
+
    @Html.Partial("PIndex")
+
     </table>
     <div id="showDetail"/> 
