--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
@@ -15,7 +15,13 @@
  </div>
 
 <div>
-   <table border="1" id="elems">
+   <table border="1">
+   <tr>
+            <th class="order">Proposal</th>
+            <th class="order">Acronym</th>
+            <th class="order">Creator</th>
+            <th>Aproval</th>
+        </tr>
   @Html.Partial("PIndex")
     </table> 
 </div>
