--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/IndexAll.cshtml
@@ -14,7 +14,14 @@
 
 
 <div>
-   <table border="1" id="elems">
+   <table border="1">
+   
+        <tr>
+            <th class="order">Proposal</th>
+            <th class="order">Acronym</th>
+            <th class="order">Creator</th>
+            <th>Aproval</th>
+        </tr>
         @Html.Partial("PIndex")
     </table>
 </div>
