--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
@@ -178,7 +178,7 @@ textarea
 .autocomplete {
     font-family: Tahoma;
     font-size: 8pt;
-    background-color: white;
+    background-color: rgb(245, 244, 244);
     border: 1px solid black;
     position: absolute;
     cursor: default;
@@ -197,5 +197,5 @@ textarea
     padding: 1px;
     padding-left: 5px;
     color: white;
-    background-color: #0A246A;
+    background-color: #bdbfc6;
 }
